Add submit listener for checkbox data, turn topping inputs into an array variable

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <br>
 
       <div>
-          <form id="pizza-prices">
+          <form id="all-pizza-options">
             <h4>Pick your Pizza Size</h4>
             <div class="radio">
               <label>
