Add if function method for basic price change based on size selected and output function to append results of price function in UI and html class price-output to display results

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <h4><b>Order Summary:</b><h4>
               <p>Pizza Size: <span class="size-output"></span></p>
               <p>Toppings: <span class="toppings-output"></span></p>
+              <p>Price: $<span class="price-output"></span></p>
           </div>
 
 <!--      <ul id="prices">
