Fix spacing output issue of toppings

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <br>
             <h4>What toppings do you want?</h4>
             <div class="form-group">
-              <input type="checkbox" name="toppings-on-pizza" value="Sliced Tomatoes"> Sliced Tomatoes
-              <input type="checkbox" name="toppings-on-pizza" value="Jalapenos"> Jalapenos
+              <input type="checkbox" name="toppings-on-pizza" value="Sliced-Tomatoes "> Sliced Tomatoes
+              <input type="checkbox" name="toppings-on-pizza" value="Jalapenos "> Jalapenos
             </div>
 <br>
 
@@ -46,7 +46,7 @@
             <h4><b>Order Summary:</b><h4>
               <p>Pizza Size: <span class="size-output"></span></p>
               <p>Toppings: <span class="toppings-output"></span></p>
-              <p>Price: $<span class="price-output"></span></p>
+              <p>Total Price: $<span class="price-output"></span></p>
           </div>
 
 <!--      <ul id="prices">
