Add and seperate additional topping options and add small pizza option with pricing method  adjusted accordingly

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
       <div class="jumbotron">
-        <h2>Nothing But Greens Pizza Shop</h2>
+        <h2>Adult-Child Pizza Shop</h2>
       </div>
 
 <br>
@@ -18,6 +18,13 @@
       <div>
           <form id="all-pizza-options">
             <h4>Pick your Pizza Size</h4>
+            <p>(Small $10, Medium $15, Large $20)</p>
+            <div class="radio">
+              <label>
+                <input type="radio" name="size-of-pizza" value="Small - Table for one" checked>
+                Small (10 inch)
+              </label>
+            </div>
             <div class="radio">
               <label>
                 <input type="radio" name="size-of-pizza" value="Medium - Best when shared with another" checked>
@@ -32,9 +39,21 @@
             </div>
 <br>
             <h4>What toppings do you want?</h4>
+            <p>($2 per topping any size, but try keep it under 5... seriously)</p>
             <div class="form-group">
-              <input type="checkbox" name="toppings-on-pizza" value="Sliced-Tomatoes "> Sliced Tomatoes
-              <input type="checkbox" name="toppings-on-pizza" value="Jalapenos "> Jalapenos
+              <input type="checkbox" name="toppings-on-pizza" value="Strips "> Veggie Bacon
+              <input type="checkbox" name="toppings-on-pizza" value="Loaf "> Neatloaf
+              <input type="checkbox" name="toppings-on-pizza" value="Nuggets "> Chik'n Nuggets (Made only from real Chik'ns) <br>
+              <input type="checkbox" name="toppings-on-pizza" value="Curds "> Cheddar Cheese Curds
+              <input type="checkbox" name="toppings-on-pizza" value="Fried-Sticks "> Fried Mozzarella Sticks <br>
+              <input type="checkbox" name="toppings-on-pizza" value="Mac "> Mac n' Cheese!
+              <input type="checkbox" name="toppings-on-pizza" value="Tots "> Sweet Potato Tots
+              <input type="checkbox" name="toppings-on-pizza" value="Poppers "> Jalapeno Poppers
+              <input type="checkbox" name="toppings-on-pizza" value="Chips "> Sour Cream n' Onion Potato Chips
+              <input type="checkbox" name="toppings-on-pizza" value="Egg "> Fried egg
+              <input type="checkbox" name="toppings-on-pizza" value="Mash "> Mashed Taters <br>
+              <input type="checkbox" name="toppings-on-pizza" value="Dirty "> Dirty Brown Gravy
+              <input type="checkbox" name="toppings-on-pizza" value="Spicy "> Sriracha
             </div>
 <br>
 
